--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
         a { 
           color:black;
         }
+        .h4:link { 
+          text-decoration:none; 
+        } 
+        .h4:visited { 
+          text-decoration:none; 
+        } 
+        .h4:hover { 
+          text-decoration:underline; 
+        }
+        .h4 {  
+            color:white;
+        }
         </style>
     </head>
     <body> 
@@ -30,12 +42,12 @@
         <div id="nav">
             <ul> 
                 <li><a class="nav" href="http://scratchpad.io/Brian-Lopez-APS/About">About</a></li>
-                <li><a class="nav" href="http://scratchpad.io/Brian-Lopez-APS/Convention">Convention</a></li>
+                <li><a class="nav" href="blog.html">Convention</a></li>
                 <li><a class="nav" href="http://scratchpad.io/Brian-Lopez-APS/Interests">Interests</a></li>
             </ul>
         </div>
         <div id="main">
-            <h1>Brian Lopez</h1>
+            <h1><a id="b" href="https://wikipedia.com/Brian_Lopez">Brian Lopez</a></h1>
             <p>A brief insight of my life. All started in <a href="https://en.wikipedia.org/wiki/San_Jose,_California">San Jose, California</a>. (I enjoy my city a lot.)</p>
             <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/SAN_JOSE_CALIFORNIA_PALM_TREE_2010.jpg" alt="San Jose, California" width="500">
             <h2>🏀My Personal Interest🏀</h2>
