Nav+Body update

--- a/index.html
+++ b/index.html
@@ -8,22 +8,41 @@
       background-position: center;
       background-repeat: repeat;
       background-attachment: fixed;
+      font-family: "Georgia"; 
+      }
+    #navbar {
+      color:white;
+      border-style: solid;
+      border-width: 5px;
+      border-color: white;
+    }
+    .navcont {
+      color:white;
+      font-family: "Georgia";
     }
     h1 {
       color: white;
+      font-family: "Georgia";
+      text-align: center;
+      font-size: 35px;
+    }
+    h5 {
+      color: white;
+      text-align: center;
     }
   </style>
 </head>
 
 <body> 
-    <div>
+    <div id="navbar">
       <ul> 
-        <li><a class="nav" href="index.html">Home</a></li>
-        <li><a class="nav" href="http://scratchpad.io/Brian-Lopez-APS/Convention">About</a></li>
-        <li><a class="nav" href="index.html">Blog</a></li>
+        <li><a class="navcont" href="index.html">Home</a></li>
+        <li><a class="navcont" href="http://scratchpad.io/Brian-Lopez-APS/Convention">About</a></li>
+        <li><a class="navcont" href="index.html">Blog</a></li>
       </ul>
     </div>
-    <h1>Quentin Miller</h1>
-		
+    <h1>Brian Lopez</h1>
+    <h5>An insight of me.</h5>
+    <hr>
+  	
 </body>
-
