--- a/blog.html
+++ b/blog.html
@@ -14,3 +14,8 @@
             </ul>
         </div>
 </body>
+
+<div class="image">
+    <a href="./img/Blog/Blog1/blackenbridge.jpg"><img src="./img/Blog/Blog1/blackenbridge.jpg" alt="Black and White Golden Gate Bridge at Night" width="250px"></a>
+        <div>A black and white photo of the Golden Gate Bridge.</div>
+</div>
