--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     h5 {
       color: gold;
     }
-
+    #bridgecaption {
+      color:white;
+    }
   </style>
 </head>
 
@@ -51,8 +53,8 @@
     <h5>An insight of me.</h5>
     <hr color="gold">
     <div class="image">
-    <a href="./img/blog/blog1/blackenbridge.jpg"><img src="./img/blog/blog1/blackenbridge.jpg" alt="Black and White Golden Gate Bridge at Night" width="550px"></a>
-        <div>A black and white photo of the Golden Gate Bridge.</div>
+    <a href="./img/blog/blog1/darkbridgebridge.jpg"><img src="./img/blog/blog1/darkbridge.jpg" alt="Black and White Golden Gate Bridge at Night" width="550px"></a>
+        <div id="bridgecaption">A black and white photo of the Golden Gate Bridge.</div>
 </div>
   	
 </body>
