Added birthday clock.

--- a/blog.html
+++ b/blog.html
@@ -55,4 +55,5 @@
         <p>This Advanced Computer Science class will be a good chance as I said to assist me in learning a lot more. I don't have the passion of being athletic, attempting to be trilingual, or becoming a photojournalist as much as becoming useful with computers and similar technologies.</p> 
         <p>My current outlook for a future job will involve using technology and I must use this opportunity to hopefully make my dream actually come true because I don't want to be a professional athlete (even though that'd be extremely cool), to be a polyglot, or to be a journalist as much.</p>
     </div>
+    <hr color="gold">
     </body>
