--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     }
   </style>
 </head>
-
 <body> 
     <div id="navbar">
       <ul id="navbarlist" style="list-style-type: square"> 
@@ -46,8 +45,10 @@
         <li><a class="navcont" href="blog.html">Blog</a></li>
       </ul>
     </div>
-    <h1>Brian Lopez</h1>
-    <h5>An insight of me.</h5>
+    <div id="title">
+      <h1>Brian Lopez</h1>
+      <h5>An insight of me.</h5>
+    </div>
     <hr color="gold">
     <div class="image">
       <a href="./img/blog/home/darkbridge.jpg"><img src="./img/blog/home/darkbridge.jpg" alt="Black and White Golden Gate Bridge at Night" width="550px"></a>
@@ -79,6 +80,6 @@
     else if (days < -1)
     document.write(day_description + " was " + ((days)*-1) + (days < -2 ? " days" : " day") + " ago this year!");
     document.write("</h3></center>");
-    //  End -->
+    // End -->
     </SCRIPT>
-    </body>
+</body>
