--- a/blog.html
+++ b/blog.html
@@ -11,12 +11,11 @@
       font-family: "Georgia"; 
       color: gold;
       text-align: center;
-      }
-    #navbar {
-      color: gold;
       border-style: solid;
       border-width: 2px;
       border-color: gold;
+      }
+    #navbar {
       text-align: left;
     }
     #navbarlist {
@@ -31,21 +30,31 @@
 </head>
 
 <body>
-    <div id="navbar">
-      <ul id="navbarlist" style="list-style-type: square"> 
-        <li><a class="navcont" href="index.html">Home</a></li>
-        <li><a class="navcont" href="http://scratchpad.io/Brian-Lopez-APS/Convention">About</a></li>
-        <li><a class="navcont" href="blog.html">Blog</a></li>
+  <div id="navbar">
+    <ul id="navbarlist" style="list-style-type: square"> 
+      <li><a class="navcont" href="index.html">Home</a></li>
+      <li><script type="text/javascript">
+        function About() {
+          alert("This certain part of the website isn't just done yet, please come back later!");
+        }
+        </script>
+        <a class="navcont" href="javascript:About();">About</a>
+        </li>
+      <li><a class="navcont" href="blog.html">Blog</a></li>
       </ul>
-    </div>
-    <h2>Blog Posts</h2>
-    <hr color="gold">
-    <div id="BlogI">
-        <h3>Hello, World! - 20/01/16 </h3>
-        <p>This blog is a self-made one from scratch and the purpose is to show people information about myself. The gain I wish to obtain from doing this blog is to learn more about HTML, CSS, and hopefully other forms of coding such as JavaScript by getting more comfortable with it and to use it with ease.</p>
-        <p>I want to expand my knowledge about them more than just simply from regular class, I want to get ahead of the pack and go in a class that will help me do so as I am wanting to get into the field of using computers.</p>
-        <p>This Advanced Computer Science class will be a good chance as I said to assist me in learning a lot more. I don't have the passion of being athletic, attempting to be trilingual, or becoming a photojournalist as much as becoming useful with computers and similar technologies.</p> 
-        <p>My current outlook for a future job will involve using technology and I must use this opportunity to hopefully make my dream actually come true because I don't want to be a professional athlete (even though that'd be extremely cool), to be a polyglot, or to be a journalist as much.</p>
-    </div>
-    <hr color="gold">
-    </body>
+  </div>
+  <hr color="gold">
+  <h2>Blog Posts</h2>
+  <hr color="gold">
+  <div id="BlogI">
+      <h3>Hello, World! - 20/01/16 </h3>
+      <p>This blog is a self-made one from scratch and the purpose is to show people information about myself. The gain I wish to obtain from doing this blog is to learn more about HTML, CSS, and hopefully other forms of coding such as JavaScript by getting more comfortable with it and to use it with ease.</p>
+      <p>I want to expand my knowledge about them more than just simply from regular class, I want to get ahead of the pack and go in a class that will help me do so as I am wanting to get into the field of using computers.</p>
+      <p>This Advanced Computer Science class will be a good chance as I said to assist me in learning a lot more. I don't have the passion of being athletic, attempting to be trilingual, or becoming a photojournalist as much as becoming useful with computers and similar technologies.</p> 
+      <p>My current outlook for a future job will involve using technology and I must use this opportunity to hopefully make my dream actually come true because I don't want to be a professional athlete (even though that'd be extremely cool), to be a polyglot, or to be a journalist as much.</p>
+  </div>
+  <hr color="gold">
+  <div id="BlogII">
+     <h3>Unnamed Blog Post II - Undetermined Date</h3>
+  </div>
+</body>
