--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       font-family: "Georgia"; 
       color: gold;
       text-align: center;
-      }
-    #navbar {
       border-style: solid;
       border-width: 2px;
       border-color: gold;
+      }
+    #navbar {
       text-align: left;
     }
     #navbarlist {
@@ -45,6 +45,7 @@
         <li><a class="navcont" href="blog.html">Blog</a></li>
       </ul>
     </div>
+    <hr color="gold">
     <div id="title">
       <h1>Brian Lopez</h1>
       <h5>An insight of me.</h5>
