Colour scheme is different.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       background-repeat: repeat;
       background-attachment: fixed;
       font-family: "Georgia"; 
-      color: gold;
+      color: #a18e60;
       text-align: center;
       border-style: solid;
       border-width: 2px;
-      border-color: gold;
+      border-color: #a18e60;
       }
     #navbar {
       text-align: left;
@@ -24,7 +24,7 @@
     auto;
     }
     .navcont {
-      color: gold;
+      color: #a18e60;
     }
     h1 {
       font-size: 35px;
@@ -46,17 +46,17 @@
         <li><a class="navcont" href="blog.html">Blog</a></li>
       </ul>
     </div>
-    <hr color="gold">
+    <hr color="a18e60">
     <div id="title">
       <h1>Brian Lopez</h1>
       <h5>An insight of me.</h5>
     </div>
-    <hr color="gold">
+    <hr color="a18e60">
     <div class="image">
       <a href="./img/blog/home/darkbridge.jpg"><img src="./img/blog/home/darkbridge.jpg" alt="Black and White Golden Gate Bridge at Night" width="550px"></a>
       <div id="bridgecaption">A black and white photo of the Golden Gate Bridge.</div>
     </div>
-  	<hr color="gold">
+  	<hr color="a18e60">
     <SCRIPT language=JavaScript>
     <!-- Begin
     var day_description = "Brian's birthday";
