Edited description text

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <hr color="a18e60">
     <div id="title">
       <h1>Brian Lopez</h1>
-      <h5>An minor insight of my life.</h5>
+      <h5>A minor insight of my life.</h5>
     </div>
     <hr color="a18e60">
     <div class="image">
