--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,9 @@
   <hr color="a18e60">
   <div id="BlogII">
      <h3>Day I  of CS50X - 25/01/16</h3>
-     <p>My first impression of the video was that...</p>
+     <p>My first impression of the video was that it was interesting and entertaining as a video. I enjoyed the content so far because it isn't too complex but teaches me new information at a pace where it is confortable for me.</p>
+     <p>There are some content of HTML and CSS that I haven't yet learned so that may be a problem for. As they claim, the level of skill set varies which is very relieving to me as it won't be too extreme or too simple.</p>
+     <p>It will be at a level where I can comprehend and where I can learn new information which is what I'm striving for. I want this to be a learning experience for me. I enjoy learning new things and CS50x will certainly be helpful for me to learn.</p>
   </div>
   <hr color="a18e60">
   <div id="BlogI">
