--- a/blog.html
+++ b/blog.html
@@ -46,6 +46,12 @@
   <hr color="a18e60">
   <h2>Blog Posts</h2>
   <hr color="a18e60">
+  <div id="BlogIII">
+     <h3>Scratch Project Take 2 Reflections - 01/02/16</h3>
+     <p>I did take steps differently to approach to the second Scratch game. I made my game intentionally different on the complexity of the second game compared to my original first game which was the maze.</p>
+     <p>I tried multiple of different features of which I had not impleemented in my first game. Thought this wasn't much of a problem, it still wasn't as complex as I said compared to my maze.</p>
+     <p>I wanted to have a game where it was simple enough to feature all of the requirements but more detailed than the ones on the videos. I could have tried more on the game, but I'm not creative enough and wanted it to be simple.</p>
+  </div>
   <div id="BlogII">
      <h3>Day I  of CS50X - 25/01/16</h3>
      <p>My first impression of the video was that it was interesting and entertaining as a video. I enjoyed the content so far because it isn't too complex but teaches me new information at a pace where it is confortable for me.</p>
