--- a/blog.html
+++ b/blog.html
@@ -46,6 +46,13 @@
   <hr color="a18e60">
   <h2>Blog Posts</h2>
   <hr color="a18e60">
+   <div id="BlogIB">
+     <h3>Obama Pledges $4 Billion for CS Education - 03/02/16</h3>
+     <p>The benefits of Obama doing this is that this will help the current generation of students into arriving to a changing economy that focuses more and more on technology and computer science/p>
+     <p>A problem that may arise from this is that the economy may shift away from technology when students go to college and later get a career. It can be possible for jobs involving technology to decrese due to a lack of interest or to foreigners taking ours.</p>
+     <p>Nonetheless, I still support what Obama is trying to do with helping the future generation of students. It gives them more options to pick a career in a society with the trend of where technology continuously to improve year by year.</p>
+  </div>
+   <hr color="a18e60">
   <div id="BlogIII">
      <h3>Scratch Project Take 2 Reflections - 01/02/16</h3>
      <p>I did take steps differently to approach to the second Scratch game. I made my game intentionally different on the complexity of the second game compared to my original first game which was the maze.</p>
