--- a/blog.html
+++ b/blog.html
@@ -46,9 +46,17 @@
   <hr color="a18e60">
   <h2>Blog Posts</h2>
   <hr color="a18e60">
-   <div id="BlogIB">
+   <div id="BlogV">
+     <h3>How Encryption Affects Our Lives - 17/02/16</h3>
+     <p>I believe that we as citizens of the United States, we have the right to have our content and our data private without the government looking at it. The government shouldn't get involved into getting into a personal life online.</p>
+     <p>A case where the government should see a persons data is when a person is dead and the government needs to loook on the phone of the person because he was a terrorist so the FBI can find out the motive of it.</p>
+     <p>By releasing information of the NSA, Edward Snowden moral had the justified reasoning to do so. He has to let the US and even the world know about the corrupted spying by the government by wiretapping our phones and getting data sent on the internet.</p>
+  </div>
+   <hr color="a18e60">
+  <hr color="a18e60">
+   <div id="BlogIV">
      <h3>Obama Pledges $4 Billion for CS Education - 03/02/16</h3>
-     <p>The benefits of Obama doing this is that this will help the current generation of students into arriving to a changing economy that focuses more and more on technology and computer science/p>
+     <p>The benefits of Obama doing this is that this will help the current generation of students into arriving to a changing economy that focuses more and more on technology and computer science.</p>
      <p>A problem that may arise from this is that the economy may shift away from technology when students go to college and later get a career. It can be possible for jobs involving technology to decrese due to a lack of interest or to foreigners taking ours.</p>
      <p>Nonetheless, I still support what Obama is trying to do with helping the future generation of students. It gives them more options to pick a career in a society with the trend of where technology continuously to improve year by year.</p>
   </div>
