--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,7 @@
         <a class="navcont" href="javascript:About();">About</a>
         </li>
       <li><a class="navcont" href="blog.html">Blog</a></li>
+      <li><a class="navcont" href="portfolio.html">Portfolio</a></li>
       </ul>
   </div>
   <hr color="a18e60">
@@ -52,7 +53,6 @@
      <p>A case where the government should see a persons data is when a person is dead and the government needs to loook on the phone of the person because he was a terrorist so the FBI can find out the motive of it.</p>
      <p>By releasing information of the NSA, Edward Snowden moral had the justified reasoning to do so. He has to let the US and even the world know about the corrupted spying by the government by wiretapping our phones and getting data sent on the internet.</p>
   </div>
-   <hr color="a18e60">
   <hr color="a18e60">
    <div id="BlogIV">
      <h3>Obama Pledges $4 Billion for CS Education - 03/02/16</h3>
