--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <a class="navcont" href="javascript:About();">About</a>
           </li>
         <li><a class="navcont" href="blog.html">Blog</a></li>
+        <li><a class="navcont" href="portfolio.html">Portfolio</a></li>
       </ul>
     </div>
     <hr color="a18e60">
