--- a/blog.html
+++ b/blog.html
@@ -48,6 +48,12 @@
   <h2>Blog Posts</h2>
   <hr color="a18e60">
    <div id="BlogV">
+     <h3>Overview of ACS - 05/04/16</h3>
+     <p>My experience of Accelerated Computer Science has overall not been the best overall feeling. Initially, I was excited about this class because I thought it'd be fun. I did understand that the class was going to be hard and difficult but never expected to have this level of intensity. This class is wearing me down physically and mentally. I lose sleep over this class, and it's not just me who is losing sleep. This class is also stressing combining with the interim and other class work. 
+I lost myself at PSET 3, the content got more difficult in understanding while trying to study and work hard during interim week with all the future tests and challenges. It just got too overwhelming for me to handle everything. I just can't really handle it all. I then started procrastinating and putting everything aside.</p>
+ </div>
+  <hr color="a18e60">
+   <div id="BlogV">
      <h3>How Encryption Affects Our Lives - 17/02/16</h3>
      <p>I believe that we as citizens of the United States, we have the right to have our content and our data private without the government looking at it. The government shouldn't get involved into getting into a personal life online.</p>
      <p>A case where the government should see a persons data is when a person is dead and the government needs to loook on the phone of the person because he was a terrorist so the FBI can find out the motive of it.</p>
