--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </div>
     <hr color="a18e60">
     <div id="title">
-      <h1>Brian Lopez</h1>
-      <h5>A minor insight of my life.</h5>
+      <h1>National Basketball Association</h1>
+      <h5>The 2015-2016 season.</h5>
     </div>
     <hr color="a18e60">
     <div class="image">
