--- a/portfolio/design_a_band.html
+++ b/portfolio/design_a_band.html
@@ -48,7 +48,7 @@
   <div class="main">
 <div class="image">
       <a href="./portfolio/aggressiveconductorig1.png"><img src="./portfolio/aggressiveconductorig1.png" alt="Album cover" width="550px"></a>
-      <div id="bridgecaption">A black and white photo of the Golden Gate Bridge.</div>
+      <div id="bridgecaption"></div>
     </div>
     
     
