--- a/portfolio.html
+++ b/portfolio.html
@@ -44,4 +44,14 @@
       <li><a class="navcont" href="portfolio.html">Portfolio</a></li>
       </ul>
   </div>
-</body>
+</body>`
+  <div class = "main">
+    <div id = "carousel">
+      <div class="grid">
+        <iframe width="420" height="315" src="https://www.youtube.com/embed/_YqHHsADADw" frameborder="0" allowfullscreen></iframe>
+       
+        <!-- Update the line below so that when you click on it it takes you to your project -->
+        <p><a href="https://www.youtube.com/watch?v=_YqHHsADADw" target="_blank">Click here to see my final project</a></p>
+</div>
+    </div>
+  </div>
